# vartracker

./: .flake8  .gitignore  .pre-commit-config.yaml  .zenodo.json  AGENTS.md  CITATION.cff  Dockerfile  Dockerfile.dev  MANIFEST.in  README.md  environment.yml  pyproject.toml  pytest_results.txt  schema.csv  schema.json  vartracker.py
.github/workflows/: ci.yml  publish-pypi.yml
docs/: DEPENDENCIES.md  OUTPUT_SCHEMA.md
scripts/: check_output_schema.py  check_toml.py  check_trailing_whitespace.py  check_yaml.py  fix_eof.py
tests/: __init__.py  test_analysis.py  test_analysis_launcher.py  test_cli.py  test_cli_integration.py  test_consensus.py  test_constants.py  test_core.py  test_data.py  test_generate.py  test_lofreq_primer_rescue.py  test_main.py  test_parse_pokay.py  test_plotting.py  test_reference_prepare.py  test_schema.py  test_snakemake_workflow.py  test_vcf_processing.py
util/: chrom_map.txt  parse_pokay.py
vartracker/: Snakefile  __init__.py  _version.py  amino_acids.py  analysis.py  analysis_launcher.py  annotation_processing.py  consensus.py  constants.py  core.py  generate.py  lofreq_primer_rescue.py  main.py  plotting.py  provenance.py  reference_prepare.py  schemas.py  vcf_processing.py
vartracker/data/: NC_045512.gff3  __init__.py  parse_pokay.py
vartracker/test_data/bams/: test_psg_0_aligned.indelqual.bam  test_psg_0_aligned.indelqual.bam.bai  test_psg_1_aligned.indelqual.bam  test_psg_1_aligned.indelqual.bam.bai  test_psg_2_aligned.indelqual.bam  test_psg_2_aligned.indelqual.bam.bai  test_psg_3_aligned.indelqual.bam  test_psg_3_aligned.indelqual.bam.bai  test_psg_4_aligned.indelqual.bam  test_psg_4_aligned.indelqual.bam.bai  test_psg_5_aligned.indelqual.bam  test_psg_5_aligned.indelqual.bam.bai
vartracker/test_data/coverage/: test_psg_0.coverage.txt  test_psg_0_depth.txt  test_psg_1.coverage.txt  test_psg_12.coverage.txt  test_psg_15.coverage.txt  test_psg_1_depth.txt  test_psg_2.coverage.txt  test_psg_2_depth.txt  test_psg_3.coverage.txt  test_psg_3_depth.txt  test_psg_4.coverage.txt  test_psg_4_depth.txt  test_psg_5.coverage.txt  test_psg_5_depth.txt  test_psg_6.coverage.txt  test_psg_9.coverage.txt
vartracker/test_data/inputs/: test_input.csv  test_input_bam.csv  test_input_e2e.csv  test_input_vcf.csv
vartracker/test_data/mock_pokay/: mock_pokay.csv
vartracker/test_data/precomputed/: test_results.csv
vartracker/test_data/vcfs/: test_psg_0.lofreq.vcf.gz.csi  test_psg_0.vcf.gz.csi  test_psg_1.lofreq.vcf.gz.csi  test_psg_1.vcf.gz.csi  test_psg_12.lofreq.vcf.gz.csi  test_psg_15.lofreq.vcf.gz.csi  test_psg_2.lofreq.vcf.gz.csi  test_psg_2.vcf.gz.csi  test_psg_3.lofreq.vcf.gz.csi  test_psg_3.vcf.gz.csi  test_psg_4.lofreq.vcf.gz.csi  test_psg_4.vcf.gz.csi  test_psg_5.lofreq.vcf.gz.csi  test_psg_5.vcf.gz.csi  test_psg_6.lofreq.vcf.gz.csi  (+1 more)
