[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vartracker"
version = "1.0.2"
authors = [
    {name = "Dr Charles Foster"},
]
maintainers = [
    {name = "Dr Charles Foster", email = "charles.foster@unsw.edu.au"},
]
description = "Track the persistence (or loss) of mutations during long-term passaging"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
keywords = [
    "bioinformatics",
    "genomics",
    "variant-analysis",
    "mutation-tracking",
    "longitudinal-analysis",
    "SARS-CoV-2",
    "passaging",
    "VCF",
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "cyvcf2>=0.30.0",
    "argparse-formatter>=1.4",
    "urlextract>=1.9.0",
    "snakemake>=9",
]

[project.urls]
Homepage = "https://github.com/charlesfoster/vartracker"
"Bug Reports" = "https://github.com/charlesfoster/vartracker/issues"
Source = "https://github.com/charlesfoster/vartracker"
Documentation = "https://github.com/charlesfoster/vartracker/blob/main/README.md"

[project.scripts]
vartracker = "vartracker.main:main"
parse_pokay = "vartracker.data.parse_pokay:main"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "pre-commit>=3.6",
]

test = ["pytest", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["vartracker"]

[tool.hatch.build.targets.sdist.force-include]
"vartracker/test_data" = "vartracker/test_data"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503", "E501", "E701"]
per-file-ignores = {"vartracker/__init__.py" = ["F401", "F403"]}

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_unused_configs = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
